--- a/app/src/main/res/layout/activity_hint.xml
+++ b/app/src/main/res/layout/activity_hint.xml
@@ -46,30 +46,33 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="180dp"
+                android:layout_gravity="center"
                 android:gravity="center_vertical"
                 android:orientation="vertical"
                 tools:layout_weight="90">
 
                 <ImageButton
                     android:id="@+id/cameraButton"
-                    style="@android:style/Widget.Holo.ImageButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:src="@android:drawable/ic_menu_camera" />
 
                 <ImageButton
                     android:id="@+id/galleryButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:src="@android:drawable/ic_menu_gallery" />
 
                 <ImageButton
                     android:id="@+id/saveImgButton"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:src="@android:drawable/ic_menu_save" />
             </LinearLayout>
