--- a/app/src/main/res/layout/activity_hint.xml
+++ b/app/src/main/res/layout/activity_hint.xml
@@ -38,7 +38,7 @@
                 android:padding="10dp">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/photoView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:src="@android:color/darker_gray" />
