--- a/app/src/main/res/layout/activity_hint.xml
+++ b/app/src/main/res/layout/activity_hint.xml
@@ -20,12 +20,12 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="40"
-            android:background="#dddddd">
+            android:background="#ff0000">
 
             <SurfaceView
                 android:id="@+id/livePreview"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent" />
         </FrameLayout>
 
         <LinearLayout
