--- a/app/src/main/res/layout/activity_hint.xml
+++ b/app/src/main/res/layout/activity_hint.xml
@@ -79,6 +79,13 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:src="@android:drawable/ic_menu_save" />
+
+                <Button
+                    android:id="@+id/contourButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    />
+
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
