--- a/app/src/main/res/layout/activity_solver.xml
+++ b/app/src/main/res/layout/activity_solver.xml
@@ -105,6 +105,13 @@
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
                     android:src="@android:drawable/ic_menu_save" />
+                <ImageButton
+                    android:id="@+id/solveButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:src="@android:drawable/ic_menu_mapmode" />
             </LinearLayout>
         </LinearLayout>
     </LinearLayout>
